--- a/lib/rails/generators/templates/interactor.erb
+++ b/lib/rails/generators/templates/interactor.erb
@@ -2,7 +2,7 @@
 
 class <%= class_name %> < ApplicationInteractor
 
-  def call
+  def perform
     # TODO implement <%= class_name %> call
   end
 
