refactor ActiveInteractor::Interactor::Context to allow for context class definition

--- a/lib/rails/generators/templates/initializer.erb
+++ b/lib/rails/generators/templates/initializer.erb
@@ -7,9 +7,12 @@ ActiveInteractor.configure do |config|
   config.logger = Rails.logger
 
   # Set the default directory for interactors
-  <%- if directory != 'interactors' -%>
+  <%- if !directory.blank? -%>
   config.dir_name = '<%= directory %>'
   <%- else -%>
   # config.dir_name = 'interactors'
   <%- end -%>
+
+  # Do not generate seperate context classes
+  # config.generate_context_class = false
 end
