Various improvements and fixes
 ### Added

- ActiveInteractor.logger=
- ActiveInteractor::Base#dup
- ActiveInteractor::Context::Loader
- ActiveInteractor::Error::InvalidContextClass
- ActiveInteractor::Interactor::Context#context_fail!
- ActiveInteractor::Interactor::Context#context_rollback!
- ActiveInteractor::Interactor::Context.contextualize_with
- ActiveInteractor::Interactor::Context#finalize_context!

 ### Changed

- ActiveInteractor::Context::Attributes.attributes now excepts arguments for attributes
- ActiveInteractor::Generators various improvements to rails generators
- ActiveInteractor::Interactor::Context.context_class will now first attempt to find an
  existing context class, and only create a new context class if a context is not found.
- ActiveInteractor::Organizer.organize now excepts symbols and strings as arguments.

 ### Removed

- ActiveInteractor::Configuration
- ActiveInteractor::Context::Attributes.attributes= in favor of ActiveInteractor::Context#attributes
- ActiveInteractor::Context::Attributes.attribute_aliases
- ActiveInteractor::Context::Attributes#clean!
- ActiveInteractor::Context::Attributes#keys
- ActiveInteractor::Interactor#fail_on_invalid_context?
- ActiveInteractor::Interactor#should_clean_context?
- ActiveInteractor::Interactor::Callbacks.clean_context_on_completion
- ActiveInteractor::Interactor::Context.context_attribute_aliases
- ActiveInteractor::Interactor::Execution

--- a/lib/rails/generators/interactor/templates/organizer.erb
+++ b/lib/rails/generators/interactor/templates/organizer.erb
@@ -1,6 +1,6 @@
 # frozen_string_literal: true
 
-class <%= class_name %> < ActiveInteractor::Organizer
+class <%= class_name %> < ApplicationOrganizer
 
 <%- if interactors.any? -%>
   organize <%= interactors.map(&:classify).join(", ") %>
