- Added: ActiveInteractor::Config - Added: ActiveInteractor.config - Added: ActiveInteractor.configure - Added: ActiveInteractor::Railtie - Changed: ActiveInteractor.logger is now part of ActiveInteractor.config - Removed: ActiveInteractor.logger=

--- a/lib/rails/generators/active_interactor/templates/initializer.erb
+++ b/lib/rails/generators/active_interactor/templates/initializer.erb
@@ -2,4 +2,7 @@
 
 require 'active_interactor'
 
-ActiveInteractor.logger = ::Rails.logger
+ActiveInteractor.configure do |config|
+  # set the ActiveInteractor logger to rails logger
+  config.logger = ::Rails.logger
+end
