#95 added configuration option for context generators

--- a/lib/rails/generators/active_interactor/templates/initializer.erb
+++ b/lib/rails/generators/active_interactor/templates/initializer.erb
@@ -12,4 +12,8 @@ ActiveInteractor.configure do |config|
   <%- else -%>
   # config.rails.directory = 'interactors'
   <%- end -%>
+
+  # do not automatically generate context classes
+  # when interactors are generated
+  # config.rails.generate_context_classes = false
 end
