--- a/lib/rails/generators/active_interactor/templates/initializer.erb
+++ b/lib/rails/generators/active_interactor/templates/initializer.erb
@@ -2,4 +2,18 @@
 
 require 'active_interactor'
 
-ActiveInteractor.logger = ::Rails.logger
+ActiveInteractor.configure do |config|
+  # set ActiveInteractor.logger to Rails.logger
+  config.logger = ::Rails.logger
+
+  # set the default directory for interactors
+<%- if directory != 'interactors' -%>
+  config.rails.directory = '<%= directory %>'
+<%- else -%>
+  # config.rails.directory = 'interactors'
+<%- end -%>
+
+  # do not automatically generate context classes
+  # when interactors are generated
+  # config.rails.generate_context_classes = false
+end
