--- a/lib/rails/generators/active_interactor/templates/initializer.erb
+++ b/lib/rails/generators/active_interactor/templates/initializer.erb
@@ -6,10 +6,12 @@ ActiveInteractor::Rails.configure do |config|
   # ORM configuration
   # Load and configure the ORM. Supports :active_record (default)
   # Other ORMs may be available as additional gems.
-  <%- if options[:orm] %>require 'active_interactor/rails/orm/<%= options[:orm] %>'<%- else -%># require 'active_interactor/rails/orm/<MY_ORM>'<%- end -%>
+  <%- if options[:orm] %>  require 'active_interactor/rails/orm/<%= options[:orm] %>'<%- else -%>  # require 'active_interactor/rails/orm/<MY_ORM>'
+  <%- end -%>
 
   # set the default directory for interactors
-  <%- if directory != 'interactors' -%>config.directory = '<%= directory %>'<%- else -%># config.directory = 'interactors'<%- end -%>
+  <%- if directory != 'interactors' -%>  config.directory = '<%= directory %>'<%- else -%>  # config.directory = 'interactors'
+  <%- end -%>
 
   # do not automatically generate context classes
   # when interactors are generated
