--- a/lib/rails/generators/templates/active_interactor.erb
+++ b/lib/rails/generators/templates/active_interactor.erb
@@ -2,7 +2,7 @@
 
 require 'active_interactor'
 
-ActiveInteractor::Rails.configure do |config|
+ActiveInteractor.configure do |config|
   # ORM configuration
   # Load and configure the ORM. Supports :active_record (default)
   # Other ORMs may be available as additional gems.
@@ -12,14 +12,6 @@ ActiveInteractor::Rails.configure do |config|
   # require 'active_interactor/rails/orm/<MY_ORM>'
 <%- end -%>
 
-  # set the default directory for interactors
-<%- if directory != 'interactors' -%>
-  config.directory = '<%= directory %>'
-<%- else -%>
-  # config.directory = 'interactors'
-<%- end -%>
-
-  # do not automatically generate context classes
-  # when interactors are generated
-  # config.generate_context_classes = false
+  # Set the ActiveInteractor.logger
+  config.logger = ::Rails.logger
 end
