--- a/lib/rails/generators/templates/active_interactor.erb
+++ b/lib/rails/generators/templates/active_interactor.erb
@@ -14,4 +14,7 @@ ActiveInteractor.configure do |config|
 
   # Set the ActiveInteractor.logger
   config.logger = ::Rails.logger
+
+  # Silence deprecation warnings in the console
+  # config.silence_deprecation_warnings
 end
